@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2018-07-01
  * Made idea sorting pluggable.
+ * Added incomprehensible option to ideas.
 
 2018-06-25
  * Gave Session a self relationship.
